--- a/src/Catty/Resources/Localization/pt-BR.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/pt-BR.lproj/Localizable.strings
@@ -26,13 +26,13 @@
 "acceleration-sensor" = "sensor-de-aceleração";
 
 /* No comment provided by engineer. */
-"Actors and objects" = "Actors and objects";
+"Actors and objects" = "Atores e objetos";
 
 /* No comment provided by engineer. */
 "Add" = "Adicionar";
 
 /* No comment provided by engineer. */
-"Add actor or object" = "Add actor or object";
+"Add actor or object" = "Adicionar ator ou objeto";
 
 /* No comment provided by engineer. */
 "add comment here..." = "adicione um comentário aqui...";
@@ -47,10 +47,16 @@
 "Add sound" = "Adicionar som";
 
 /* No comment provided by engineer. */
+"Agree" = "Concordar";
+
+/* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "Todos os dispositivos Bluetooth foram desligados com sucesso";
 
 /* No comment provided by engineer. */
 "All known Bluetooth devices successfully removed" = "Todos os dispositivos Bluetooth conhecidos foram removidos com sucesso";
+
+/* No comment provided by engineer. */
+"Allow the app to control Arduino boards" = "Allow the app to control Arduino boards";
 
 /* paint */
 "Alpha" = "Alfa";
@@ -89,10 +95,13 @@
 "Arduino" = "Arduino";
 
 /* No comment provided by engineer. */
-"arduino analog" = "arduino analog";
+"arduino analog" = "analógico de arduino";
 
 /* No comment provided by engineer. */
 "arduino digital" = "arduino digital";
+
+/* No comment provided by engineer. */
+"Arduino extension" = "Blocos Arduino";
 
 /* No comment provided by engineer. */
 "at " = "em ";
@@ -128,19 +137,22 @@
 "Background" = "Pano de Fundo";
 
 /* No comment provided by engineer. */
-"background name" = "nome_fundo";
+"background name" = "nome do fundo";
 
 /* No comment provided by engineer. */
-"background number" = "número_fundo";
+"background number" = "número do plano de fundo";
 
 /* No comment provided by engineer. */
 "Backgrounds" = "Pano de fundo";
+
+/* No comment provided by engineer. */
+"Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
 /* paint */
 "Blue" = "Azul";
 
 /* No comment provided by engineer. */
-"blue" = "Azul";
+"blue" = "azul";
 
 /* No comment provided by engineer. */
 "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings." = "O Bluetooth não está disponível. Ou o seu dispositivo não suporta o Bluetooth 4.0, ou o seu circuito integrado de Bluetooth está danificado. Por favor verifique ligando a outro dispositivo Bluetooth nas Configurações.";
@@ -176,9 +188,6 @@
 "By registering you agree to our" = "Ao registrar-se, você concorda com nossos";
 
 /* No comment provided by engineer. */
-"By switching to the section \"Explore\" you can discover more interesting projects from people all over the world." = "Mudando para a seção \"Explorar\" você pode descobrir mais projetos interessantes de pessoas ao redor do mundo.";
-
-/* No comment provided by engineer. */
 "Camera roll" = "Camera roll";
 
 /* No comment provided by engineer. */
@@ -194,10 +203,13 @@
 "Cannot connect to device. The device is not responding." = "Não foi possível ligar ao dispositivo. O dispositivo não está a responder.";
 
 /* No comment provided by engineer. */
-"Cannot connect to the media library. Please check your internet connection." = "Cannot connect to the media library. Please check your internet connection.";
+"Cannot connect to the media library. Please check your internet connection." = "Não é possível conectar-se à biblioteca de mídia. Verifique sua conexão com a internet.";
 
 /* No comment provided by engineer. */
 "Categories" = "Categorias";
+
+/* No comment provided by engineer. */
+"Catrobat community" = "Comunidade Catrobat";
 
 /* No comment provided by engineer. */
 "ceil" = "teto";
@@ -221,7 +233,7 @@
 "Change volume by" = "Alterar volume por";
 
 /* No comment provided by engineer. */
-"Change x by " = "Change x by ";
+"Change x by " = "Alterar x por ";
 
 /* No comment provided by engineer. */
 "Change y by " = "Change y by ";
@@ -284,6 +296,9 @@
 "Continue" = "Continuar";
 
 /* No comment provided by engineer. */
+"Continue project" = "Continuar projeto";
+
+/* No comment provided by engineer. */
 "Control" = "Controle";
 
 /* No comment provided by engineer. */
@@ -297,9 +312,6 @@
 
 /* No comment provided by engineer. */
 "Copy project" = "Copiar projeto";
-
-/* No comment provided by engineer. */
-"Create & Remix" = "Criar & Remisturar";
 
 /* No comment provided by engineer. */
 "Create account" = "Criar conta";
@@ -411,6 +423,9 @@
 
 /* No comment provided by engineer. */
 "direction" = "direção";
+
+/* No comment provided by engineer. */
+"Disagree" = "Discordar";
 
 /* No comment provided by engineer. */
 "Disconnect all devices" = "Desligar todos os dispositivos";
@@ -537,12 +552,6 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Erro ao salvar o arquivo";
-
-/* No comment provided by engineer. */
-"Explore" = "Explorar";
-
-/* No comment provided by engineer. */
-"Explore apps" = "Explorar apps";
 
 /* No comment provided by engineer. */
 "FA" = "Fá";
@@ -1151,9 +1160,6 @@
 "Pocket Code is a programming environment for iOS for the visual programming language Catrobat. The code of Pocket Code is mostly under GNU AGPL v3 licence. For further information to the licence please visit following links:" = "Pocket Code é um ambiente de programação para iOS para a linguagem de programação visual Catrobat. O código do Pocket Code está principalmente sob a licença de GNU AGPL v3. Para mais informações sobre a licença, visite os links seguintes:";
 
 /* No comment provided by engineer. */
-"Pocket Code let's you play great games and run other fantastic apps like for instance presentations, quizzes and so on." = "Pocket Code permite a você jogar grandes jogos e executar outros aplicativos fantásticos como por exemplo apresentações, quizzes, e assim por diante.";
-
-/* No comment provided by engineer. */
 "Pocket Code Recorder" = "Gravador de Pocket Code";
 
 /* No comment provided by engineer. */
@@ -1209,6 +1215,9 @@
 
 /* No comment provided by engineer. */
 "Projects" = "Programas";
+
+/* No comment provided by engineer. */
+"Projects on device" = "Programas";
 
 /* No comment provided by engineer. */
 "Rate Us" = "Avalie-nos";
@@ -1574,6 +1583,12 @@
 "to list" = "à lista";
 
 /* No comment provided by engineer. */
+"To offer you all the benefits of our services and the associated account, it is necessary to collect certain data from you.\n\n\u{2022} To maintain and improve our services (apps and websites) and to do scientific research on ICT and STEM/STEAM education, we use Google Analytics, Crashlytics, and Firebase, all by Google LLC (USA), as well as Dynatrace by Dynatrace LLC (USA) to get metadata about the usage of our services, e.g., crash information, timestamps, visited pages/screens, usage of our apps and services, used operating system, and information about the network provider. This analysis and the collected data is not linked to your profile and does not contain any personal information (last bits of the IP address get anonymized). However, the collected data will get transferred to the service-provider (Google LLC, USA and Dynatrace LLC, USA). Data processing is based on agreements with Google LLC and Dynatrace LLC. This relationship to the service provider conforms to the European Union\'s General Data Protection Regulation (EU GDPR) and EU-USA \"Privacy Shield\" agreement.\n\n\u{2022} To create and use an account in our systems, and to inform you about necessary changes about your account per e-mail, e.g., updates or violations of our Terms of Use and Service, our community rules, or our policies, we will store your username and, if provided by you, your e-mail address. If you have connected your account via your Google or Facebook account, we additionally store an identification key connected to your account on these services. We will not use this data for any other (e.g., marketing) purposes, unless you explicitly allowed us to do so.\n\n\u{2022} On a voluntary basis, you can give us your country of residence through your account page on the sharing site. This will get displayed on your public profile and only be used for statistical and research purposes by us. It can be removed at any time in your profile settings.\n\n\u{2022} You can withdraw the usage of the personal data belonging to your account at any time by deleting your account through your profile page on https://share.catrob.at. After deleting your account you will still be able to use the provided services, but not to collaborate, e.g., through uploading programs, commenting, or liking. Also, all provided content linked to your account, e.g., uploaded programs, comments, etc., will be deleted.\n\n\u{2022} To avoid misuse of our services, e.g., through user contributed uploads or comments for illegal purposes, all user generated public data (uploads, comments) will be stored internally in a database, together with a timestamp and the used internet address. This data will not be used by or forwarded to any institutions, unless sufficiently illegal actions are reasonably suspected and officially entitled legal institutions request it based on applicable law. Each case will be thoroughly checked on an individual basis by us first.\n\n\u{2022} You can voluntarily subscribe to the Catrobat Newsletter, on https://catrob.at/newsletter provided by us through the MailChimp service (The Rocket Science Group LLC d/b/a MailChimp, USA). You will then receive updates on the Catrobat project and its services to your provided e-mail address. You can withdraw the newsletter at any time by using the \"unsubscribe\" link in the footer of every newsletter. This newsletter is provided by MailChimp with whom we do have a data-processing agreement and who committed to the EU General Data Protection Regulation and EU-USA \"Privacy Shield\". For further details on MailChimp please also look up MailChimp\'s Privacy Policy and Terms of Use.\n\n\u{2022} All Services are provided by the free open source Catrobat project under the umbrella of the International Catrobat Association – Verein zur Förderung freier Software, a non-profit NGO incorporated in Graz, Austria (European Union). Our policies pay respect to EU and Austrian data protection law (GDPR). To get in touch with us, please send an e-mail to contact@catrobat.org or mail us to Catrobat,\nc/o\nInstitute of Software Technology,\nGraz University of Technology,\nInffeldgasse 16b,\nA-8010 Graz, Austria\n(European Union).\n\nIn case you are below the age of 14, this policy must be accepted by a legal guardian (usually a parent).\n\nCatrobat\'s official English language privacy policy is available on the web under https://catrob.at/privacypolicy.\n\nVersion 2.2, 17 October 2019\n\nFind the previous, outdated, version of our privacy policy (2.0) here: http://developer.catrobat.org/privacy_policy_2-0" = "To offer you all the benefits of our services and the associated account, it is necessary to collect certain data from you.\n\n\u{2022} To maintain and improve our services (apps and websites) and to do scientific research on ICT and STEM/STEAM education, we use Google Analytics, Crashlytics, and Firebase, all by Google LLC (USA), as well as Dynatrace by Dynatrace LLC (USA) to get metadata about the usage of our services, e.g., crash information, timestamps, visited pages/screens, usage of our apps and services, used operating system, and information about the network provider. This analysis and the collected data is not linked to your profile and does not contain any personal information (last bits of the IP address get anonymized). However, the collected data will get transferred to the service-provider (Google LLC, USA and Dynatrace LLC, USA). Data processing is based on agreements with Google LLC and Dynatrace LLC. This relationship to the service provider conforms to the European Union\'s General Data Protection Regulation (EU GDPR) and EU-USA \"Privacy Shield\" agreement.\n\n\u{2022} To create and use an account in our systems, and to inform you about necessary changes about your account per e-mail, e.g., updates or violations of our Terms of Use and Service, our community rules, or our policies, we will store your username and, if provided by you, your e-mail address. If you have connected your account via your Google or Facebook account, we additionally store an identification key connected to your account on these services. We will not use this data for any other (e.g., marketing) purposes, unless you explicitly allowed us to do so.\n\n\u{2022} On a voluntary basis, you can give us your country of residence through your account page on the sharing site. This will get displayed on your public profile and only be used for statistical and research purposes by us. It can be removed at any time in your profile settings.\n\n\u{2022} You can withdraw the usage of the personal data belonging to your account at any time by deleting your account through your profile page on https://share.catrob.at. After deleting your account you will still be able to use the provided services, but not to collaborate, e.g., through uploading programs, commenting, or liking. Also, all provided content linked to your account, e.g., uploaded programs, comments, etc., will be deleted.\n\n\u{2022} To avoid misuse of our services, e.g., through user contributed uploads or comments for illegal purposes, all user generated public data (uploads, comments) will be stored internally in a database, together with a timestamp and the used internet address. This data will not be used by or forwarded to any institutions, unless sufficiently illegal actions are reasonably suspected and officially entitled legal institutions request it based on applicable law. Each case will be thoroughly checked on an individual basis by us first.\n\n\u{2022} You can voluntarily subscribe to the Catrobat Newsletter, on https://catrob.at/newsletter provided by us through the MailChimp service (The Rocket Science Group LLC d/b/a MailChimp, USA). You will then receive updates on the Catrobat project and its services to your provided e-mail address. You can withdraw the newsletter at any time by using the \"unsubscribe\" link in the footer of every newsletter. This newsletter is provided by MailChimp with whom we do have a data-processing agreement and who committed to the EU General Data Protection Regulation and EU-USA \"Privacy Shield\". For further details on MailChimp please also look up MailChimp\'s Privacy Policy and Terms of Use.\n\n\u{2022} All Services are provided by the free open source Catrobat project under the umbrella of the International Catrobat Association – Verein zur Förderung freier Software, a non-profit NGO incorporated in Graz, Austria (European Union). Our policies pay respect to EU and Austrian data protection law (GDPR). To get in touch with us, please send an e-mail to contact@catrobat.org or mail us to Catrobat,\nc/o\nInstitute of Software Technology,\nGraz University of Technology,\nInffeldgasse 16b,\nA-8010 Graz, Austria\n(European Union).\n\nIn case you are below the age of 14, this policy must be accepted by a legal guardian (usually a parent).\n\nCatrobat\'s official English language privacy policy is available on the web under https://catrob.at/privacypolicy.\n\nVersion 2.2, 17 October 2019\n\nFind the previous, outdated, version of our privacy policy (2.0) here: http://developer.catrobat.org/privacy_policy_2-0";
+
+/* No comment provided by engineer. */
+"To use our app, it is necessary to accept our Privacy Policy. However, if you don\'t feel comfortable to do so, you can use our free web-services on share.catrob.at" = "To use our app, it is necessary to accept our Privacy Policy. However, if you don\'t feel comfortable to do so, you can use our free web-services on share.catrob.at";
+
+/* No comment provided by engineer. */
 "to x:" = "para X:";
 
 /* No comment provided by engineer. */
@@ -1649,9 +1664,6 @@
 "Unsupported Script:" = "Unsupported Script:";
 
 /* No comment provided by engineer. */
-"Upload" = "Upload";
-
-/* No comment provided by engineer. */
 "Upload project" = "Fazer upload do programa";
 
 /* No comment provided by engineer. */
@@ -1662,9 +1674,6 @@
 
 /* No comment provided by engineer. */
 "Uploaded" = "Upload Concluído";
-
-/* No comment provided by engineer. */
-"Use Arduino bricks" = "Usar blocos Arduino";
 
 /* No comment provided by engineer. */
 "Use camera" = "Use camera";
@@ -1724,7 +1733,7 @@
 "weekday" = "dia da semana";
 
 /* No comment provided by engineer. */
-"Welcome to Pocket Code" = "Bem-vindo ao Pocket Code";
+"Welcome!" = "Welcome!";
 
 /* No comment provided by engineer. */
 "When project started" = "When project started";
@@ -1758,9 +1767,6 @@
 
 /* No comment provided by engineer. */
 "Yesterday" = "Ontem";
-
-/* No comment provided by engineer. */
-"You are also able to build your own apps, remix existing ones and share them with your friends and other exciting people around the world." = "Também pode criar as suas próprias aplicações, remisturar aplicações existentes e partilhá-las com os seus amigos e outras pessoas interessantes de todo o mundo.";
 
 /* No comment provided by engineer. */
 "You have already downloaded this project!" = "Você já baixou este projeto!";
